--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Deixe que Deus interprete.
 </section>
 <footer>
     <p>
-    site criado por <a href="" target="_blank">wellington de lacerda</a>
+    site criado por <a href="">wellington de lacerda</a>
     </p>
 </footer>
     
